[package]
name = "sherif"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["Tom Lienard"]
description = "Opinionated, zero-config linter for JavaScript monorepos."
homepage = "https://github.com/QuiiBz/sherif"
repository = "https://github.com/QuiiBz/sherif"
keywords = [
	"cli",
	"javascript",
	"monorepo",
	"linter",
]
categories = ["development-tools"]
readme = "./README.md"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
colored = "2.0.4"
indexmap = { version = "2.0.0", features = ["serde"] }
semver = "1.0.18"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
serde_yaml = "0.9.25"

[dev-dependencies]
debugless-unwrap = "0.0.4"
insta = "1.32.0"
